--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -2,7 +2,7 @@ name: helloworld
 on: push
 jobs:
     sample-job:
-    rush-on: ubuntu-latest
+    runs-on: ubuntu-latest
     steps:
       name: my-step
       run: echo "Hello World!"
