--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,8 +1,8 @@
-name: helloworld
+name: hello-world
 on: push
 jobs:
     sample-job:
     runs-on: ubuntu-latest
     steps:
-      name: my-step
+    - name: my-step
       run: echo "Hello World!"
