--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -2,7 +2,7 @@ name: hello-world
 on: push
 jobs:
   sample-job:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-lates
     steps:
       - name: my-step
         run: echo "Hello World!"
